# cmakestarter

./: .gitignore  AddressBook.proto  CMakeLists.txt  main.cpp  ver.h.in
barlib/: CMakeLists.txt
barlib/src/: bar.cpp
binary/: CMakeLists.txt  main.cpp
foolib/: CMakeLists.txt
foolib/include/foo/: foo.h
include/: hello.h
src/: hello.cpp  main.cpp
